Fixes alignment issues

--- a/src/scss/_spinner.scss
+++ b/src/scss/_spinner.scss
@@ -4,8 +4,7 @@
   background-size: 200px 200px;
   border-radius: 50%;
   height: 200px;
-  left: 50%;
-  margin: 10% 0 0 -60px;
+  margin: 10% auto 0 auto;
   opacity: 0.5;
   position: relative;
   width: 200px;
